src/objects/Apttus__ContentEvent__c.object
<CustomObject>
    <description>Holds content events for subscribers to handle</description>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the event</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Content_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__EventName__c</fullName>
        <description>The published event</description>
        <label>Event Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Publish Content</fullName>
                    <default>true</default>
                    <label>Publish Content</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Request__c</fullName>
        <description>The Xml Request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Response__c</fullName>
        <description>The Xml response</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <description>The event handling status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Content Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>EventId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>